# e164-phones-countries

./: .codespellrc  .editorconfig  .envrc  .gitignore  .semver-baseline  Cargo.toml  README.md  devenv.nix  justfile
.github/workflows/: ci.yaml
src/: lib.rs
